--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -52,3 +52,9 @@ html {
 body {
     font-size: 14px;
 }
+
+#app {
+    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
