--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -24,25 +24,21 @@
     background-size: cover;
 }
 
-/* width size */
-$width-m: 768px;
-$width-l: 1024px;
-
 /* media */
 @mixin desktop {
-    @media (min-width: $width-l) {
+    @media (max-width: 992px) {
         @content;
     }
 }
 
 @mixin tablets {
-    @media (min-width: $width-m) and (max-width: $width-l) {
+    @media (max-width: 768px) {
         @content;
     }
 }
 
 @mixin mobile {
-    @media (max-width: $width-m) {
+    @media (max-width: 480px) {
         @content;
     }
 }
