--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -35,22 +35,25 @@ html, body{
     height: 100%;
 }
 
-// 100vw / 375px = 0.2666667 vw/px
-// 为便于换算，设定1rem = 100px, 即 1rem = 26.66667vw
-html {
-    font-size: 26.66667vw !important;
+::-webkit-scrollbar
+{
+    width: 5px;
+    height: 5px;
+    background-color: #F5F5F5;
 }
 
-/*768以上作为PC端处理*/
-@media (min-width: 768px) {
-    html {
-        font-size: 625% !important;
-    }
+::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 10px;
+    background-color: #F5F5F5;
 }
 
-/*默认字体14px*/
-body {
-    font-size: 14px;
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #cacaca;
 }
 
 #app {
